# Dense-Captioning-Backend-Vercel

./: .dockerignore  .gitignore  .vercelignore  DEPLOYMENT_SUMMARY.md  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  README_TESTING.md  VERCEL_DEPLOYMENT.md  app.py  chart_datapoint.pth  chart_label+.pth  chart_type.pth  check_db.py  check_duplicate_users.py  config.py  enhanced_preprocessing.py  hf_space_test.py  inference_science2_combined_datapoint.py  inference_science2_direct.py  medsam_app.py  medsam_space_client.py  mmcv_compat.py  nixpacks.toml  old_app.py  pdf_extractor.py  pyproject.toml  railway.json  render.yaml  requirements.txt  science_analyzer.py  scifig_preprocess.py  segregate_image.py  setup_images.py  split_subfigures.py  start_whisper_service.sh  test_api.py  test_app_local.py  test_end_to_end_segmentation.py  test_enhanced_masks.py  (+4 more)
api/: index.py  requirements.txt
legend_match_swin/: add_metadata_to_annotations.py  cascade_rcnn_r50_fpn_meta.py  check_class_distribution.py  enhanced_merge_chart_annotations.py  mask_rcnn_swin_meta.py  test_colab_checkpoint_compatibility.py  test_compatible_checkpoint.py
legend_match_swin/custom_models/: __init__.py
mmdet/models/detectors/: __init__.py  custom_cascade.py  register.py
mmdet/models/heads/: __init__.py  custom_heads.py
static/css/: style.css
static/js/: app.js
static/objects/: landscape1_objects.json  landscape2_objects.json  object2_objects.json
templates/: index.html
utils/: README.md  __init__.py  annotation_helpers.py  huggingface_client.py  medsam_integration.py  supabase_client.py
