[project]
name = "dense-captioning-backend"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "Dense Captioning Backend Flask Application"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "requests==2.31.0",
    "Werkzeug==2.3.7",
    "python-dotenv==1.0.0",
    "Pillow==10.0.0",
    "numpy==1.24.3",
    "openai-whisper==20231117",
    "pydub==0.25.1",
    "opencv-python-headless==4.8.0.76",
    "scikit-image==0.21.0",
    "scipy==1.11.1",
    "easyocr==1.7.0",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "transformers==4.35.0",
    "ultralytics==8.0.196",
    "supabase==2.3.4",
    "aiohttp==3.9.1",
    "gradio-client==0.10.0",
    "openai==1.3.0",
]

[tool.uv]
python = "3.11"

